[gd_scene load_steps=17 format=3 uid="uid://w7m6tehvvy3g"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_pefl6"]
[ext_resource type="Texture2D" uid="uid://cbss87b7xk5lc" path="res://Assets/Spritesheet/platformerPack_character.png" id="2_q0cxm"]
[ext_resource type="Texture2D" uid="uid://dxp77wq60c2rr" path="res://Assets/Textures/CloudTexture.png" id="3_8vxmb"]
[ext_resource type="PackedScene" uid="uid://bvlqntjpxguqn" path="res://Scenes/Prefabs/Rocket.tscn" id="4_pph41"]
[ext_resource type="Script" path="res://Scripts/RocketLauncher.gd" id="4_tshqf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_57bci"]
atlas = ExtResource("2_q0cxm")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2um1"]
atlas = ExtResource("2_q0cxm")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjvmv"]
atlas = ExtResource("2_q0cxm")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3yh2"]
atlas = ExtResource("2_q0cxm")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_4nss6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57bci")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2um1")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjvmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3yh2")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5i8s"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvbjh"]
size = Vector2(48, 48)

[sub_resource type="Curve" id="Curve_m2jh0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.246032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_3gc37"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="Curve" id="Curve_w7qy8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.246032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_lfvsn"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 16
script = ExtResource("1_pefl6")
move_speed = null
slide_speed = null
jump_force = 750.0
global_gravity_mul = 3.0
mass = null
max_jump_count = null
max_coyote_time = null
double_jump = null

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_4nss6")
animation = &"Walk"

[node name="PlayerShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f5i8s")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 256
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_tvbjh")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, 8)
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 0.4
emission_shape = 2
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 15.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[node name="RocketLauncher" type="Node2D" parent="."]
position = Vector2(0, -8)
script = ExtResource("4_tshqf")
rocket = ExtResource("4_pph41")
sibling_hitbox_specifier = "Hurtbox"

[node name="ParticleTrails" type="CPUParticles2D" parent="."]
position = Vector2(0, 40)
emitting = false
amount = 20
lifetime = 0.4
speed_scale = 0.8
texture = ExtResource("3_8vxmb")
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 0.2
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_w7qy8")
color_ramp = SubResource("Gradient_lfvsn")

[node name="SlideScanner" type="RayCast2D" parent="."]
position = Vector2(0, -24)
target_position = Vector2(56, 56)
collision_mask = 16

[connection signal="body_entered" from="Hurtbox" to="." method="_on_collision_body_entered"]
